...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key("home_screen"),
      appBar: AppBar(
        title: const Text('Home'),
      ),
      body: Column(
        children: [
          // Header
          Consumer<HomeViewModel>(builder: (context, viewModel, child) {
            return Column(
...

// News section header
  Widget newsheader() {
    return const Padding(
      padding: EdgeInsets.all(16),
      child: Text(
        'Latest News',
        style: TextStyle(
          fontSize: 20,
          fontWeight: FontWeight.normal,
        ),
      ),
    );
...
